Android:
AsyncData transefer partlye added

Tablet sizes and graphics changes

Code refactoring changed:
UTF-8 constant added